--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,17 +5,28 @@ services:
   web:
     build:
       context: .
-      dockerfile: docker/nginx/Dockerfile
+      dockerfile: nginx/Dockerfile
     ports:
       - "8080:80"
     volumes:
       - .:/app/
     links:
       - php
+      - postgres
 
   php:
-    build:
-      context: .
-      dockerfile: docker/php/Dockerfile
+    image: php:fpm-alpine3.18
     volumes:
       - .:/app/
+
+  postgres:
+    image: postgres:alpine3.18
+    environment:
+      POSTGRES_USER: docker
+      POSTGRES_PASSWORD: docker
+      POSTGRES_DB: dockerdb
+    ports:
+      - "5433:5432"
+    volumes:
+      - .:/app/
+      - ./data:/var/lib/postgresql/data
