--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,4 +3,4 @@ FROM nginx:alpine3.18
 
 COPY . /app/
 
-COPY ./docker/nginx/nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
